--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: #2c3e50
+  background-image: url('https://github.com/Hamelsie/Qu-c-a-Ng-c-ANh-/issues/2#issue-1614577443');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
+
 
 .box {
 	width: 1000px;
