--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  background-image: url('https://github.com/Hamelsie/Qu-c-a-Ng-c-ANh-/issues/2#issue-1614577443');
+  background-image: url('https://photos.app.goo.gl/Pob7koRmELYKwyi67');
   background-repeat: no-repeat;
   background-size: cover;
 }
