--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  background-image: url('https://photos.app.goo.gl/Pob7koRmELYKwyi67');
+  background-image: url('https://i.imgur.com/yZywkjt.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
