--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 	align-items: center;
   background-image: url('https://i.imgur.com/yZywkjt.png');
   background-repeat: no-repeat;
-  background-size:contain;
+ background-size:1280px 1024px;
 }
 
 
