--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  background-image: url('https://i.imgur.com/yZywkjt.png');
+  background-image: url('https://i.imgur.com/QZRUAwV.png');
   background-repeat: no-repeat;
- background-size:1280px x 768px ;
+ background-size:1080px x 1080px ;
 }
 
 
