--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 	align-items: center;
   background-image: url('https://i.imgur.com/QZRUAwV.png');
   background-repeat: no-repeat;
- background-size:1080px x 1080px ;
+ background-size:cover ;
 }
 
 
