--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  background-image: url('https://i.imgur.com/QZRUAwV.png');
+  background-image: url('blob:https://imgur.com/2c6671bc-1ba7-4677-84eb-0ff5d59e0138');
   background-repeat: no-repeat;
  background-size:cover ;
 }
